fixed stuck hover fix for button

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,7 @@ nav > button:active {
 }
 
 @media(hover: hover) {
-    nav > div > a:hover {
+    nav > button:hover {
         background-color: #a0851a;
         color: black;
         transition: 250ms;
